[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/spring_island/spring_map.tscn" type="PackedScene" id=1]
[ext_resource path="res://menu/main-menu/ui/ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/main-menu/main_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/day-night/day_night_dome.tscn" type="PackedScene" id=4]

[node name="main_menu" type="Node"]
script = ExtResource( 3 )

[node name="players" type="Node" parent="."]

[node name="spring_map" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.939693, 0.0593912, -0.336824, 0, 0.984808, 0.173648, 0.34202, 0.163176, -0.925417, -25, 8, 3 )
current = true
far = 40.0

[node name="players_spawn_pos" type="Position3D" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8 )

[node name="day_night_dome" parent="." instance=ExtResource( 4 )]
enable = false

[node name="ui" parent="." instance=ExtResource( 2 )]

[connection signal="on_generate_map_completed" from="spring_map" to="." method="_on_spring_map_on_generate_map_completed"]
[connection signal="on_generating_map" from="spring_map" to="." method="_on_spring_map_on_generating_map"]
[connection signal="lobby_player_update" from="ui" to="." method="_on_ui_lobby_player_update"]
